@@ -125,7 +125,7 @@
 2452,0xe4,   ,  0, 7,1000,all,0x000	//SO_WARMER
 2453,0xeb,   ,  0, 1:1:2:2:3,1000,enemy,0x000	//SO_VACUUM_EXTREME
 2479,0xe5,   ,  0, 1,1000,enemy, 0x000	//GN_THORNS_TRAP
-2482,0xe6,   ,  2, 1, 500,enemy, 0x000	//GN_WALLOFTHORN
+2482,0xe6,   , -1, 1, 500,all, 0x000	//GN_WALLOFTHORN
 2483,0x86,   ,  0, 5,1000,enemy, 0x000	//GN_CRAZYWEED
 2485,0xe7,   ,  0, 3,1000,enemy, 0x080	//GN_DEMONIC_FIRE
 2487,0xe8,   ,  0, 3,1000,enemy, 0x000	//GN_FIRE_EXPANSION_SMOKE_POWDER
